# payulator

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  README.rst  pyproject.toml
docs/: conf.py  index.rst  introduction.rst  modules.rst
merriweather_py/: __init__.py
merriweather_py/theme/: combination_loan_contract.rst
notebooks/: 1_loan_contract.ipynb  2_taxes.ipynb  3_aml_report.ipynb  4_mail_loan_schedules.ipynb  electric_bike_team_analysis.ipynb  examples.ipynb  make_contract_templates_pdf.ipynb
payulator/: __init__.py  constants.py  helpers.py  loan.py  loan_contract.py
payulator/theme/: amortized_loan_contract.rst  combination_loan_contract.rst  interest_only_loan_contract.rst
payulator/theme/css/: style.css
tests/: context.py  test_helpers.py  test_loan.py  test_loan_contract.py
tests/data/: bad_loan_contract_params.json  bad_loan_params.json  good_loan_contract_params.json  good_loan_params.json
