[tool.poetry]
name = "payulator"
version = "1.0.0"
description = "A Python 3.9+ loan calculator"
authors = ["Alex Raichev <alex@raichev.net>"]
readme = "README.rst"
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "<2"
voluptuous = "<1"
weasyprint = "^53.4"
Jinja2 = "^3.0.3"
rst2html5 = "^2.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0"
pytest = "*"
black = "=19.3b0"
pre-commit = "*"
publish_sphinx_docs = "^1.0"
sphinx = "*"
nbstripout = "^0.5.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
