[tool.poetry]
name = "payulator"
version = "2.0.4"
description = "A Python 3.9+ loan calculator"
authors = ["Alex Raichev <alex@raichev.net>"]
readme = "README.rst"
license = "Proprietary"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
pandas = ">=1"
voluptuous = ">=0"
weasyprint = ">=53.4"
Jinja2 = ">=3.0.3"
rst2html5 = ">=2.0"
python-dotenv = ">=0.19.2"

[tool.poetry.group.dev.dependencies]
jupyter = ">=1.0"
pytest = ">=6"
pre-commit = ">=0.1"
black = ">=19.3b0"
nbstripout = ">=0.5.0"
ruff = ">=0.2.1"
sphinx = ">=0.1"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E402", "E501", "E731", "E741", "F401", "F403"]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

